apps/oci-ingress-L4-to-L7/app.yaml
## LB service creates L4 lb. L4 lb transfers queries to ingress-nginx controller (POD), which directs on the basis of ingress resources. 
## Ingress-nginx controller runs in synchronized loops and polls ingress resource all the time.
## From internet https://L4-IP/ and https://L4-IP/kube will work.
## From local nodes https://CLUSTERIP/ and https://CLUSTERIP/kube (with --insecure flag) will work. CLUSTERIP is of ingress-nginx controller service.
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https   
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: docker-hello-world
  labels:
    app: docker-hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-hello-world
    spec:
      containers:
      - name: docker-hello-world
        image: scottsbaldwin/docker-hello-world:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-kube-deployment
  labels:
    app: hello-kube-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-kube-deployment
    spec:
      containers:
      - name: hello-again
        image: "gcr.io/google-samples/node-hello:1.0"
---
apiVersion: v1
kind: Service
metadata:
  name: docker-hello-world-svc
spec:
  selector:
    app: docker-hello-world
  ports:
    - port: 8088
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: ClusterIP
  selector:
    app: hello-kube-deployment
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"  # because of this annotation only, ingress-nginx controller reads the configuration of this ingress only.
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: docker-hello-world-svc
          servicePort: 8088
      - path: /kube
        backend:
          serviceName: hello-kubernetes
          servicePort: 8080
